optimized and new account file added

--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
                                 <input type="checkbox">Remember me
                             </div>
                             <br>
-                            <a href="login.html" ><input id="log" type="button" value="Login" taget="_main"></a>
-                            <a href="forgot.html" taget="_main"><input id="fp" type="button" value="Forgot Password?"></a>
-                            <!-- <button onclick="login.css">Login</button>
-                            <button onclick="forgot.css">Forgot Password?</button> -->
+                            <a href="login.html" target="_main"><button id="sign">Sign In</button></a>
+                            <a href="forgot.html" target="_main" style="text-decoration: none;color:inherit;"><button id="fp">Forgot Password?</button></a>
                         </div>
                     </div>
             <div id="down">
-                    First time here?
-                    <a style="text-decoration: none; color:#38b000;" href="new_account.html" target="_main">Create your account.</a>
+                    Don't have an account?
+                    <a style="text-decoration: none; color:#38b000;" href="Signin.html" target="_main">Create your account.</a>
             </div>
         </div>
     </div>
