--- a/login.html
+++ b/login.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Successful</title>
+    <title>Sign In Successful</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div id="success">
-        Login Sucessful!!
+        Sign In Sucessful!!
     </div>
 </body>
 </html>
